# TensorRT-LLM

./: .gitmodules  .pre-commit-config.yaml  pyproject.toml
cpp/: CMakeLists.txt
cpp/tensorrt_llm/batch_manager/: cacheFormatter.cpp  cacheTransBuffer.cpp  cacheTransceiver.cpp  dataTransceiver.cpp  dataTransceiverImpl.cpp  kvCacheManager.cpp  mlaCacheFormatter.cpp  oneSideCacheTransceiver.cpp  trtGptModelInflightBatching.cpp
cpp/tensorrt_llm/common/: attentionOp.cpp  envUtils.cpp  envUtils.h
cpp/tensorrt_llm/executor/: CMakeLists.txt
cpp/tensorrt_llm/executor/cache_transmission/nixl_utils/: CMakeLists.txt  agentBindings.cpp  fabricTransfer.cu  fabricTransfer.h  transferAgent.cpp  transferAgent.h
cpp/tensorrt_llm/kernels/: IndexerTopK.h  customMoeRoutingKernels.cu  fmhaDispatcher.cpp  indexerTopK.cu  sparseAttentionKernels.h
cpp/tensorrt_llm/nanobind/: bindings.cpp
cpp/tensorrt_llm/thop/: CMakeLists.txt  IndexerTopKOp.cpp  attentionOp.cpp  attentionOp.h
cpp/tests/batch_manager/: cacheTransceiverTest.cpp
docs/source/models/: supported-models.md
examples/disaggregated/debug_for_gpt_oss/: BOUNCE_PERF_OPTIMIZATION.md
examples/disaggregated/debug_for_py/: benchmark.sh  ctx_config.yaml  disagg_config.yaml  gen_config.yaml  run_test.sh
examples/llm-api/: quickstart_advanced.py
jenkins/: L0_MergeRequest.groovy  L0_Test.groovy
tensorrt_llm/: __init__.py  _utils.py  disaggregated_params.py
tensorrt_llm/_torch/: model_config.py  utils.py
tensorrt_llm/_torch/attention_backend/: interface.py  trtllm.py
tensorrt_llm/_torch/custom_ops/: __init__.py  cpp_custom_ops.py  torch_custom_ops.py
tensorrt_llm/_torch/disaggregation/: transceiver.py
tensorrt_llm/_torch/models/: __init__.py  modeling_speculative.py  modeling_utils.py
tensorrt_llm/_torch/modules/: attention.py  linear.py
tensorrt_llm/_torch/pyexecutor/: _util.py  config_utils.py  kv_cache_manager_v2.py  model_engine.py  py_executor.py  py_kv_cache_transceiver.py  py_kv_cache_transceiver_v1.py  request_utils.py  resource_manager.py  sampler.py
tensorrt_llm/_torch/speculative/: utils.py
tensorrt_llm/commands/: serve.py
tensorrt_llm/executor/: proxy.py
tensorrt_llm/inputs/: utils.py
tensorrt_llm/llmapi/: __init__.py  llm_args.py  llm_utils.py  reasoning_parser.py
tensorrt_llm/serve/: openai_disagg_server.py  openai_server.py  router.py
tensorrt_llm/tokenizer/: tokenizer.py
(+2961 files in other folders)
